--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <link rel="stylesheet" href="assets/style.css">
-body {
-    backgroun
+
     
-}<div class="cartao__conteudo__pergunta"></div>
+<div class="cartao__conteudo__pergunta"></div>
     <p>O que é Java Script?</p>
 </div>                        
-<div class="cis phone number is already associated with a Vercel account.artao__conteudo__resposta">
+<div class="cartao__conteudo__resposta">
 </div>
 <div class="cartao__conteudo__pergunta"></div>
 
