--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <div class="cartao__conteudo__resposta">
             <p>O
                 .</p>
-        </div><article class="cartao">
+        </div>
+        <article class="cartao">
             <div class="cartao__conteudo">
                 <h3>Programação</h3>
                 <div class="cartao__conteudo__pergunta">
